WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320233
[GFC] Crash when certain tracks get marked as inflexible
https://bugs.webkit.org/show_bug.cgi?id=320233
Summary
[GFC] Crash when certain tracks get marked as inflexible
Sammy Gill
Reported
2026-07-24 15:05:28 PDT
We may sometimes crash if we attempt to mark a track as inflexible. This is coming from the HashSet's key validation
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-24 15:05:40 PDT
<
rdar://problem/183166106
>
Sammy Gill
Comment 2
2026-07-24 15:22:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70145
EWS
Comment 3
2026-07-26 20:41:48 PDT
Committed
317961@main
(17ba5b975693): <
https://commits.webkit.org/317961@main
> Reviewed commits have been landed. Closing PR #70145 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug